# artio-mine-bot

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  04-implementation-plan.md  AGENTS.md  AI_ONLY_QUICK_START.md  AI_ONLY_STRUCTURE_MAPPING.md  AI_SOURCE_MAPPER_IMPLEMENTATION_PACK.md  API.md  CODEX_DOCUMENTATION_AUDIT.md  DATA_MODEL_AND_MIGRATIONS.md  DEPLOY.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.frontend  FINAL_PROJECT_SUMMARY.md  INDEX.txt  Makefile  PHASE2_CODEX_PROMPT.md  PHASE2_COMPLETE_WITH_FIXES.md  PHASE2_COMPLETION_REVIEW.md  PHASE2_DOWNLOAD_GUIDE.md  PHASE2_TEST_FIXES.md  PHASE2_TEST_FIX_PROMPT.md  QUICK_START.md  README (3).md  README.md  SCHEMA.md  SSH_SETUP.md  STRUCTURE_FIRST_IMPLEMENTATION.md  UI.md  alembic.ini  check_errors.sh  conftest.py  deploy.sh  docker-compose.yml  phase2_health.md  phase3_deploy.md  (+6 more)
.devcontainer/: devcontainer.json
api/: index.py  requirements.txt
app/: config.py  queue.py  runtime_ai_policy.py
docs/: 08-codex-execution-prompt.txt  CODEX_FIX_PIPELINE_TESTS.md  CODEX_FIX_TESTS.md  CODEX_MIGRATION_FIX_PLAN.md  CODEX_REPO_HARDENING_BRIEF.md  CODEX_REPO_HARDENING_CHECKLIST.md  CODEX_REPO_HARDENING_PROMPT.txt  CODEX_UI_QUICKWINS_PLAN.md  CODEX_UPDATE_PHASE4_DOCS.md  COMPLETION_STATE_REVIEW.md  CRAWL-308_add_crawl_debug_visibility_ticket.md  FINAL_UI_STATE_REPORT.md  MIGRATION_GUIDE.md  NICE_TO_HAVE_IMPLEMENTATION_PLAN.md  README (7).md  README.md  TOKEN_USAGE_ANALYSIS.md  UI_UX_ENHANCEMENT_PLAN.md  UI_UX_REVIEW_V2_UPDATED.md  WEEKS_3-8_BUNDLES.md  WEEK_1_BUNDLE.md  WEEK_2_BUNDLE.md  roadmap.md  (+6 more)
(+568 files in other folders)
